syntax = "proto3";

package throttle.v1;

option go_package = "github.com/mohammadhprp/throttle/proto";

// Health service for gRPC health checks
service Health {
  // Check returns the health status of the service
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  // Watch monitors health status and returns a stream of health check responses
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

// HealthCheckRequest is the request message for health check
message HealthCheckRequest {
  string service = 1;
}

// HealthCheckResponse is the response message for health check
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}
